# splabot-heroku

./: .gitignore  Procfile  README.md  discordbot.py  get_bankara_info.py  get_event_info.py  get_now_info.py  get_regular_info.py  get_salmonrun_info.py  get_spla_info.py  get_x_info.py  pyproject.toml  readme.md  tox.ini  weapon.py  weapondata.csv
.github/workflows/: ci.yml
cogs/: bankara_cog.py  event_cog.py  notif_channel.py  now_cog.py  regular_cog.py  salmon_cog.py  weapon_cog.py  x_cog.py
src/: bot.py  weapondata.csv
src/cogs/: bankara_cog.py  notif_channel.py  now_cog.py  regular_cog.py  salmon_cog.py  weapon_cog.py  x_cog.py
src/cogs/util/: get_bankara_info.py  get_event_info.py  get_now_info.py  get_regular_info.py  get_salmonrun_info.py  get_spla_info.py  get_x_info.py  weapon.py  weapondata.csv
tests/: test_bankara_info.py
