[tool.poetry]
name = "splabot"
version = "0.1.0"
description = ""
authors = ["Chroma7p <nahco3,hcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
tox = "^4.15.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"